# recordit

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: build.yaml
src/: executor.rs  main.rs  recorder.rs
src/executor/: conpty.rs  execution.rs  guards.rs  io_async.rs  io_blocking.rs  pty_unix.rs  shell.rs  tests.rs  toml_writer.rs
